Fix #852 - Change overflow to auto in .wrapper

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -149,7 +149,7 @@ blockquote {
   max-width: $content-width;
   margin: 0 auto;
   flex: 1 1 100%;
-  overflow: hidden;
+  overflow: auto;
 
   &.main {
     display: flex;
